--- a/final-evenmaster/src/main/resources/templates/error/403.html
+++ b/final-evenmaster/src/main/resources/templates/error/403.html
@@ -295,7 +295,7 @@
         <p class="subtitle">Bu səhifəyə giriş üçün lazımi icazəniz yoxdur. Zəhmət olmasa, sistem administratoru ilə əlaqə saxlayın.</p>
 
         <div class="btn-group">
-            <a href="/index" class="btn btn-primary">Ana Səhifəyə Qayıt</a>
+            <a href="/" class="btn btn-primary">Ana Səhifəyə Qayıt</a>
             <a href="/login" class="btn btn-secondary">Giriş Et</a>
         </div>
     </div>
